syntax = "proto3";

import public "aelf/core.proto";

option csharp_namespace = "AElf.Runtime.WebAssembly";

message SolidityTransactionParameter {
    bytes parameter = 1;
    int64 value = 2;
    // Won't transfer token, only write to sandbox memory.
    int64 delegate_call_value = 3;
    int64 gas_limit = 4;
    bool estimate_gas = 5;
}

message WasmContractCode {
    bytes code = 1;
    string abi = 2;
    aelf.Hash code_hash = 3;
}